default/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: default
spec:
  defaultBackend:
    service:
      name: nginx-1-service
      port:
        number: 80
  rules:
  - host: test.wisv.ch
    http:
      paths:
      - backend:
          service:
            name: nginx-1-service
            port:
              number: 80
        pathType: ImplementationSpecific
